[package]
name = "forgepoint"
version = "0.1.0"
edition = "2021"
authors = ["Forgepoint Contributors"]
description = "A Git-native product planning platform linter and validator"
license = "MIT"
repository = "https://github.com/rawkode/forgepoint"
keywords = ["product-management", "asciidoc", "documentation", "validation", "git-native"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "forgepoint"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive", "env"] }
anyhow = "1.0"
thiserror = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

# File system and path handling
walkdir = "2.4"
glob = "0.3"

# JSON and YAML processing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# JSON Schema validation
jsonschema = "0.18"

# Regular expressions
regex = "1.10"

# Colored output
colored = "2.1"
indicatif = "0.17"

# Parallel processing
rayon = "1.8"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"

# Logging
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"